fixed subheading text align left

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,8 +86,9 @@ body {
         width: 640px;
     }
 
-    #header p {
+    #subheader {
         text-align: left;
+        justify-content: left;
     }
 
     .footer {
